--- a/css/style.css
+++ b/css/style.css
@@ -124,6 +124,10 @@ body {
     transform: translate(-50%, -50%);
     background-color: transparent;
     left: 90%;
+    outline:none;
+}
+#selectRound:focus {
+    
 }
 
 /*//////// SELECTION MENU ////////*/
@@ -181,4 +185,52 @@ body {
 #selectMenuCharacter > img:hover {
     width: 40%;
     cursor: pointer;
+}
+#versus {
+    display: none;
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background-image: url(../assets/images/ui/vsBackground.svg);
+    background-size: cover;
+}
+#vsBar {
+    position: relative;
+    z-index: 2;
+    width: 100%;
+    height: 100%;
+    background-image: url(../assets/images/ui/vsBar.svg);
+    background-size: cover;
+}
+#userCharacter, #computerCharacter {
+    width: 70%;
+    position: absolute;
+}
+#userCharacter {
+    top: 5%;
+    left: -50%;
+    animation: slideRight 2s cubic-bezier(0, 1.1, 1, 1) infinite;
+}
+#computerCharacter {
+    bottom: -5%;
+    right: -50%;
+    animation: slideLeft 2s cubic-bezier(0, 1.1, 1, 1) infinite;
+}
+
+@keyframes slideRight {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(60%); 
+    }
+}
+@keyframes slideLeft {
+    0% {
+        transform: translateX(0); 
+    }
+    100% {
+        transform: translateX(-60%); 
+    }
 }
